WIP with simplified and improved header menus, just need to make sure things are still working correctly on mobile

--- a/js/react/src/less/header.less
+++ b/js/react/src/less/header.less
@@ -198,8 +198,7 @@
           }
         }
         .dropdown-menu {
-          margin-top: 12px;
-          margin-left: 42px;
+          margin-top: 9px;
           z-index: 10000;
         }
         .clear-text {
